# Testings

./: README.md  pyproject.toml
Testings/: combine_csv.py  create_events.py  delete_events.py  regiser_from_csv.py  registrations.py
