[tool.poetry]
name = "testings"
version = "0.1.0"
description = "Mathtrix Testing Scripts"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
faker = "^18.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
